--- a/card.html
+++ b/card.html
@@ -219,7 +219,7 @@
       };
 
       try {
-        const res = await fetch('https://zaza-back.onrender.com/card', {
+        const res = await fetch('https://onclick-back.onrender.com/card', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(payload),
