--- a/public/index.html
+++ b/public/index.html
@@ -107,8 +107,7 @@
     </footer>
   </div>
 
-  <!-- ✅ Подключение скрипта -->
-  <script src="main.js" type="module"></script>
+<script type="module" src="/src/main.js"></script>
 </body>
 </html>
       const input = document.getElementById('userId');
