--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="icon" href="https://src.mastercard.com/profile/favicon.ico" />
   <title>Click to Pay</title>
 
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="index_files/index.d9994029.css" />
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/index_files/index.d9994029.css" />
 </head>
 <body>
   <div class="root-container">
