--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <title>Click to Pay</title>
 
   <link rel="stylesheet" href="/style.css" />
-  <link rel="stylesheet" href="/index_files/index.d9994029.css" />
 </head>
 <body>
   <div class="root-container">
@@ -16,17 +15,11 @@
       <div class="container">
         <div class="row row-space-between">
           <div class="col-n header__brand">
-            <div class="header__brand__item header__brand__item--src header__brand__item--bordered">
-              <i role="img" aria-label="Mastercard Click to Pay Profile" class="icon-src"></i>
-            </div>
-            <div class="header__brand__item">
-              <i role="img" aria-label="mastercard" class="card-brand-logo--mastercard card-brand-logo--dark-support"></i>
-            </div>
+            <span class="icon-src">●●</span>
+            <span class="icon-mc">●●</span>
           </div>
           <nav class="col header__nav">
-            <a href="#" class="header__item" role="button" tabindex="0">
-              <span>US</span><i class="icon-globe"></i>
-            </a>
+            <a href="#" class="header__item"><span>US</span><span class="icon-globe">🌐</span></a>
           </nav>
         </div>
       </div>
@@ -43,22 +36,12 @@
 
         <form id="login-form" class="container-fluid" novalidate>
           <div class="row">
-            <div class="col-full">
-              <p>Create a profile or sign in</p>
-            </div>
+            <div class="col-full"><p>Create a profile or sign in</p></div>
           </div>
-
           <div class="row">
             <div class="col">
               <div class="al-input floating">
-                <input
-                  type="text"
-                  id="userId"
-                  name="userId"
-                  placeholder=" "
-                  class="al-input__input"
-                  required
-                />
+                <input type="text" id="userId" name="userId" placeholder=" " class="al-input__input" required />
                 <label for="userId" class="al-input__label">Email or mobile number</label>
                 <div class="al-input__subtext">
                   We'll use this to verify your identity. Message/data rates may apply.
@@ -70,18 +53,7 @@
           <div class="row-vertical-align-bottom">
             <div class="col-full">
               <div class="al-button">
-                <button
-                  type="submit"
-                  id="submit-btn"
-                  class="uppercase fill"
-                  aria-label="Continue"
-                  disabled
-                >
-                  <div class="al-button__dancing-dots">
-                    <div class="dancing-dot dancing-dot--1"></div>
-                    <div class="dancing-dot dancing-dot--2"></div>
-                    <div class="dancing-dot dancing-dot--3"></div>
-                  </div>
+                <button type="submit" id="submit-btn" class="uppercase fill" aria-label="Continue" disabled>
                   <span class="al-button__label">Continue</span>
                 </button>
               </div>
@@ -96,17 +68,16 @@
         <div class="row">
           <div class="col">
             <nav class="footer__nav">
-              <a href="https://www.mastercard.com/global/click-to-pay/en-us/terms-of-use.html" target="_blank" class="btn btn--footer uppercase">Terms</a>
-              <a href="https://www.mastercard.com/global/click-to-pay/en-us/privacy-notice.html" target="_blank" class="btn btn--footer uppercase">Privacy</a>
-              <a href="#" class="btn btn--footer uppercase">Cookies</a>
-              <a href="#" class="btn btn--footer uppercase">Feedback</a>
+              <a href="#" class="btn btn--footer">Terms</a>
+              <a href="#" class="btn btn--footer">Privacy</a>
+              <a href="#" class="btn btn--footer">Cookies</a>
+              <a href="#" class="btn btn--footer">Feedback</a>
             </nav>
           </div>
         </div>
       </div>
     </footer>
   </div>
-
-<script type="module" src="/src/main.js"></script>
+  <script type="module" src="/src/main.js"></script>
 </body>
 </html>
